--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SnapShop - Visual Shopping Assistant</title>
@@ -18,8 +19,10 @@
     </script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body class="bg-cream font-poppins" style="padding-top: 70px;">
     <!-- Navbar -->
     <nav class="glass-navbar fixed w-full z-50 top-0 left-0 right-0">
@@ -30,21 +33,28 @@
                         <span class="font-semibold text-indigo-dark text-xl">SnapShop</span>
                     </div>
                     <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
-                        <a href="#" class="border-teal text-gray-900 inline-flex items-center px-1 pt-1 border-b-4 text-sm font-medium">Home</a>
-                        <a href="#" class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-4 text-sm font-medium">My Finds</a>
-                        <a href="#" class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-4 text-sm font-medium">Trending</a>
+                        <a href="#"
+                            class="border-teal text-gray-900 inline-flex items-center px-1 pt-1 border-b-4 text-sm font-medium">Home</a>
+                        <a href="#"
+                            class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-4 text-sm font-medium">My
+                            Finds</a>
+                        <a href="#"
+                            class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-4 text-sm font-medium">Trending</a>
                     </div>
                 </div>
                 <div class="hidden sm:ml-6 sm:flex sm:items-center space-x-4">
-                    <a href="#" class="text-gray-500 hover:text-indigo-dark px-3 py-2 rounded-md text-sm font-medium flex items-center">
+                    <a href="#"
+                        class="text-gray-500 hover:text-indigo-dark px-3 py-2 rounded-md text-sm font-medium flex items-center">
                         <i class="fas fa-user mr-1"></i> Log In
                     </a>
-                    <a href="#" class="bg-indigo-dark text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-darker flex items-center">
+                    <a href="#"
+                        class="bg-indigo-dark text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-darker flex items-center">
                         <i class="fas fa-sign-in-alt mr-1"></i> Sign Up
                     </a>
                 </div>
                 <div class="-mr-2 flex items-center sm:hidden">
-                    <button type="button" class="mobile-menu-button inline-flex items-center justify-center p-2 rounded-md text-indigo-dark hover:text-indigo-darker focus:outline-none">
+                    <button type="button"
+                        class="mobile-menu-button inline-flex items-center justify-center p-2 rounded-md text-indigo-dark hover:text-indigo-darker focus:outline-none">
                         <i class="fas fa-bars text-xl"></i>
                     </button>
                 </div>
@@ -54,15 +64,21 @@
         <!-- Mobile menu -->
         <div class="mobile-menu hidden sm:hidden">
             <div class="pt-2 pb-3 space-y-1">
-                <a href="#" class="bg-teal-50 border-teal text-indigo-dark block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Home</a>
-                <a href="#" class="border-transparent text-gray-500 hover:bg-teal-50 hover:border-gray-300 hover:text-indigo-dark block pl-3 pr-4 py-2 border-l-4 text-base font-medium">My Finds</a>
-                <a href="#" class="border-transparent text-gray-500 hover:bg-teal-50 hover:border-gray-300 hover:text-indigo-dark block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Trending</a>
+                <a href="#"
+                    class="bg-teal-50 border-teal text-indigo-dark block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Home</a>
+                <a href="#"
+                    class="border-transparent text-gray-500 hover:bg-teal-50 hover:border-gray-300 hover:text-indigo-dark block pl-3 pr-4 py-2 border-l-4 text-base font-medium">My
+                    Finds</a>
+                <a href="#"
+                    class="border-transparent text-gray-500 hover:bg-teal-50 hover:border-gray-300 hover:text-indigo-dark block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Trending</a>
                 <div class="border-t border-gray-200 pt-4 pb-3">
                     <div class="space-y-1">
-                        <a href="#" class="block px-4 py-2 text-base font-medium text-gray-500 hover:text-indigo-dark hover:bg-teal-50">
+                        <a href="#"
+                            class="block px-4 py-2 text-base font-medium text-gray-500 hover:text-indigo-dark hover:bg-teal-50">
                             <i class="fas fa-user mr-2"></i> Log In
                         </a>
-                        <a href="#" class="block px-4 py-2 text-base font-medium text-gray-500 hover:text-indigo-dark hover:bg-teal-50">
+                        <a href="#"
+                            class="block px-4 py-2 text-base font-medium text-gray-500 hover:text-indigo-dark hover:bg-teal-50">
                             <i class="fas fa-sign-in-alt mr-2"></i> Sign Up
                         </a>
                     </div>
@@ -77,7 +93,7 @@
         <div class="container mx-auto px-4 pt-24 pb-12">
             <div class="text-center mb-12">
                 <h1 class="text-4xl font-bold text-indigo-dark mb-4">Discover Products With Just a Snap</h1>
-                <p class="text-xl text-gray-600 max-w-2xl mx-auto">Upload a photo or a video to find similar items and
+                <p class="text-xl text-gray-600 max-w-2xl mx-auto">Upload a photo to find similar items and
                     get
                     personalized
                     recommendations tailored to your preferences.</p>
