--- a/index.html
+++ b/index.html
@@ -184,14 +184,14 @@
                     <p class="text-teal-light mt-2">Visual shopping powered by AI</p>
                 </div>
                 <div class="flex space-x-6 mb-6 md:mb-0">
-                    <a href="#" class="text-teal-light hover:text-white text-xl" title="Twitter"><i
-                            class="fab fa-twitter"></i></a>
-                    <a href="#" class="text-teal-light hover:text-white text-xl" title="Instagram"><i
-                            class="fab fa-instagram"></i></a>
+                    <a href="https://x.com/zeroideasyet" class="text-teal-light hover:text-white text-xl"
+                        title="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/zeroideasyet/" class="text-teal-light hover:text-white text-xl"
+                        title="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="mailto:anuragjha7516@gmail.com" class="text-teal-light hover:text-white text-xl"
                         title="Email"><i class="fab fa-google"></i></a>
-                    <a href="#" class="text-teal-light hover:text-white text-xl" title="GitHub"><i
-                            class="fab fa-github"></i></a>
+                    <a href="https://github.com/alt-Anurag" class="text-teal-light hover:text-white text-xl"
+                        title="GitHub"><i class="fab fa-github"></i></a>
                 </div>
             </div>
             <div class="border-t border-teal-light mt-8 pt-8 text-sm text-teal-light text-center">
