--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
             <!-- Recommendations Section (Initially Hidden) -->
             <div id="recommendations-section" class="hidden mt-16">
-                <h2 class="text-3xl font-bold text-indigo-dark mb-8 text-center">Complete Your Look</h2>
+                <h2 class="text-3xl font-bold text-indigo-dark mb-8 text-center">Recommended Products</h2>
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
                     <!-- Recommendation cards will be inserted here by JavaScript -->
                 </div>
