--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         title="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="mailto:anuragjha7516@gmail.com" class="text-teal-light hover:text-white text-xl"
                         title="Email"><i class="fab fa-google"></i></a>
-                    <a href="https://github.com/alt-Anurag" class="text-teal-light hover:text-white text-xl"
+                    <a href="https://github.com/alt-Anurag/SnapShop" class="text-teal-light hover:text-white text-xl"
                         title="GitHub"><i class="fab fa-github"></i></a>
                 </div>
             </div>
