user experience improvements

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                         <span class="font-semibold text-indigo-dark text-xl">SnapShop</span>
                     </div>
                     <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
-                        <a href="#"
+                        <a href="https://snapshop-anurag.netlify.app/"
                             class="border-teal text-gray-900 inline-flex items-center px-1 pt-1 border-b-4 text-sm font-medium">Home</a>
-                        <a href="#"
-                            class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-4 text-sm font-medium">My
-                            Finds</a>
-                        <a href="#"
-                            class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-4 text-sm font-medium">Trending</a>
+                        <a href="behind_the_tech.html"
+                            class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-4 text-sm font-medium">Behind
+                            the Tech</a>
+                        <a href="faqs.html"
+                            class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-4 text-sm font-medium">FAQs</a>
                     </div>
                 </div>
                 <div class="hidden sm:ml-6 sm:flex sm:items-center space-x-4">
@@ -64,13 +64,13 @@
 
         <div class="mobile-menu hidden sm:hidden">
             <div class="pt-2 pb-3 space-y-1">
-                <a href="#"
+                <a href="https://snapshop-anurag.netlify.app/"
                     class="bg-teal-50 border-teal text-indigo-dark block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Home</a>
-                <a href="#"
-                    class="border-transparent text-gray-500 hover:bg-teal-50 hover:border-gray-300 hover:text-indigo-dark block pl-3 pr-4 py-2 border-l-4 text-base font-medium">My
-                    Finds</a>
-                <a href="#"
-                    class="border-transparent text-gray-500 hover:bg-teal-50 hover:border-gray-300 hover:text-indigo-dark block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Trending</a>
+                <a href="behind-the-tech.html"
+                    class="border-transparent text-gray-500 hover:bg-teal-50 hover:border-gray-300 hover:text-indigo-dark block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Behind
+                    the Tech</a>
+                <a href="faqs.html"
+                    class="border-transparent text-gray-500 hover:bg-teal-50 hover:border-gray-300 hover:text-indigo-dark block pl-3 pr-4 py-2 border-l-4 text-base font-medium">FAQs</a>
                 <div class="border-t border-gray-200 pt-4 pb-3">
                     <div class="space-y-1">
                         <a href="#"
