--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                         </button>
                         <label for="file-input" class="sr-only">Upload an image</label>
                         <input type="file" id="file-input" accept="image/*" class="hidden" title="Upload an image">
+                        <input type="file" id="camera-input" accept="image/*" capture="user" class="hidden">
                     </div>
                     <div class="mt-4 flex justify-center space-x-4">
                         <button id="camera-btn"
