--- a/faqs.html
+++ b/faqs.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQs - SnapShop Visual Shopping Assistant</title>
-
+    <title>SnapShop - FAQs</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
     <script>
         tailwind.config = {
@@ -85,112 +84,111 @@
         </div>
     </nav>
 
-    <section class="faq-section py-16">
-        <div class="container mx-auto px-4 sm:px-6 lg:px-8">
+    <section class="faq-section">
+        <div class="container mx-auto px-4 py-16">
             <div class="text-center mb-12">
                 <h1 class="text-4xl font-bold text-indigo-dark mb-4">Frequently Asked Questions</h1>
-                <p class="text-xl text-gray-600 max-w-2xl mx-auto">Find answers to common questions about SnapShop's visual shopping assistant.</p>
+                <p class="text-xl text-gray-600 max-w-2xl mx-auto">Find answers to common questions about SnapShop and
+                    how it works.</p>
             </div>
 
             <div class="max-w-4xl mx-auto">
-                <div class="faq-container space-y-4">
+                <div class="faq-container space-y-6">
                     <!-- FAQ Item 1 -->
-                    <div class="faq-item rounded-lg overflow-hidden shadow-sm animate-fadeInUp">
-                        <button class="faq-question w-full">
+                    <div class="faq-item animate-fadeInUp" style="animation-delay: 0.1s;">
+                        <button class="faq-question">
                             <h3>How does SnapShop work?</h3>
                             <i class="fas fa-chevron-down"></i>
                         </button>
                         <div class="faq-answer">
                             <div>
-                                <p>SnapShop uses advanced computer vision and machine learning to analyze the images you upload. It identifies objects, patterns, and styles in your photos, then matches them with similar products from our database. You'll receive personalized recommendations based on your visual preferences.</p>
+                                <p>SnapShop uses advanced computer vision and machine learning to analyze the images you
+                                    upload. It identifies objects, patterns, and styles in your photos, then matches
+                                    them with similar products from our database. You'll receive personalized
+                                    recommendations based on your visual preferences.</p>
                             </div>
                         </div>
                     </div>
 
                     <!-- FAQ Item 2 -->
-                    <div class="faq-item rounded-lg overflow-hidden shadow-sm animate-fadeInUp">
-                        <button class="faq-question w-full">
+                    <div class="faq-item animate-fadeInUp" style="animation-delay: 0.2s;">
+                        <button class="faq-question">
                             <h3>What types of images work best?</h3>
                             <i class="fas fa-chevron-down"></i>
                         </button>
                         <div class="faq-answer">
                             <div>
-                                <p>For best results, use clear, well-lit photos with a single main subject. Images with minimal background clutter and good contrast tend to produce the most accurate matches. You can upload photos of clothing, accessories, home decor, or any other products you're interested in.</p>
+                                <p>For best results, use clear, well-lit photos with a single main subject. Images with
+                                    minimal background clutter and good contrast work best. You can upload photos of
+                                    clothing, accessories, home decor, or any product you're interested in finding
+                                    similar items for.</p>
                             </div>
                         </div>
                     </div>
 
                     <!-- FAQ Item 3 -->
-                    <div class="faq-item rounded-lg overflow-hidden shadow-sm animate-fadeInUp">
-                        <button class="faq-question w-full">
-                            <h3>Is my image data stored or used for other purposes?</h3>
+                    <div class="faq-item animate-fadeInUp" style="animation-delay: 0.3s;">
+                        <button class="faq-question">
+                            <h3>Is my image data stored or shared?</h3>
                             <i class="fas fa-chevron-down"></i>
                         </button>
                         <div class="faq-answer">
                             <div>
-                                <p>We respect your privacy. Images are processed temporarily to generate recommendations and are not stored long-term. We don't use your images for any other purpose beyond providing the shopping recommendations you request. For more details, please see our Privacy Policy.</p>
+                                <p>No, we respect your privacy. Images are processed temporarily to generate
+                                    recommendations and are not stored permanently or shared with third parties. We only
+                                    retain minimal metadata to improve our service, and you can delete this at any time.
+                                </p>
                             </div>
                         </div>
                     </div>
 
                     <!-- FAQ Item 4 -->
-                    <div class="faq-item rounded-lg overflow-hidden shadow-sm animate-fadeInUp">
-                        <button class="faq-question w-full">
-                            <h3>Can I search for products by color or pattern?</h3>
+                    <div class="faq-item animate-fadeInUp" style="animation-delay: 0.4s;">
+                        <button class="faq-question">
+                            <h3>How do I purchase recommended items?</h3>
                             <i class="fas fa-chevron-down"></i>
                         </button>
                         <div class="faq-answer">
                             <div>
-                                <p>Yes! SnapShop excels at recognizing colors, patterns, and textures. Upload a photo featuring the color scheme or pattern you like, and we'll find products with similar visual characteristics. You can also refine results by color after getting your initial recommendations.</p>
+                                <p>When you find a product you like, click the "Click to Buy" button which will take you
+                                    directly to the retailer's website where you can complete your purchase. SnapShop
+                                    doesn't handle transactions directly but connects you with trusted retailers.</p>
                             </div>
                         </div>
                     </div>
 
                     <!-- FAQ Item 5 -->
-                    <div class="faq-item rounded-lg overflow-hidden shadow-sm animate-fadeInUp">
-                        <button class="faq-question w-full">
-                            <h3>How do I purchase recommended products?</h3>
+                    <div class="faq-item animate-fadeInUp" style="animation-delay: 0.5s;">
+                        <button class="faq-question">
+                            <h3>Can I save my favorite recommendations?</h3>
                             <i class="fas fa-chevron-down"></i>
                         </button>
                         <div class="faq-answer">
                             <div>
-                                <p>When you find a product you like, click the "Click to Buy" button. This will take you directly to the retailer's website where you can complete your purchase. SnapShop doesn't handle transactions directly but connects you with trusted retailers.</p>
+                                <p>Yes! When you create an account, you can save favorite products to collections and
+                                    even create mood boards. This helps the algorithm learn your preferences and provide
+                                    better recommendations over time. But this is an underdevelopment feature... Stay
+                                    tuned for it, coming soon!</p>
                             </div>
                         </div>
                     </div>
 
                     <!-- FAQ Item 6 -->
-                    <div class="faq-item rounded-lg overflow-hidden shadow-sm animate-fadeInUp">
-                        <button class="faq-question w-full">
-                            <h3>Why do I need to create an account?</h3>
+                    <div class="faq-item animate-fadeInUp" style="animation-delay: 0.6s;">
+                        <button class="faq-question">
+                            <h3>Why aren't my results accurate?</h3>
                             <i class="fas fa-chevron-down"></i>
                         </button>
                         <div class="faq-answer">
                             <div>
-                                <p>While you can use SnapShop without an account, creating one allows us to save your preferences and search history. This helps us provide better personalized recommendations over time. An account also lets you save favorite products and access them across devices.</p>
+                                <p>Accuracy depends on image quality, the backend daatabase population and the
+                                    uniqueness of items. Sometimes inaccurate results might come as our databse is still
+                                    exapnding and it is limited to less product categoris for now. Try cropping to focus
+                                    on the specific item, using better lighting, or trying our sample image to see how
+                                    it works.</p>
                             </div>
                         </div>
                     </div>
-
-                    <!-- FAQ Item 7 -->
-                    <div class="faq-item rounded-lg overflow-hidden shadow-sm animate-fadeInUp">
-                        <button class="faq-question w-full">
-                            <h3>What retailers do you work with?</h3>
-                            <i class="fas fa-chevron-down"></i>
-                        </button>
-                        <div class="faq-answer">
-                            <div>
-                                <p>We partner with hundreds of retailers across fashion, home goods, electronics, and more. Our database includes products from major brands as well as unique items from smaller boutiques. We're constantly adding new partners to expand your shopping options.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="mt-12 text-center">
-                    <p class="text-gray-600 mb-6">Still have questions? We're here to help!</p>
-                    <a href="mailto:support@snapshop.com" class="bg-indigo-dark text-white px-6 py-3 rounded-lg hover:bg-indigo-darker transition duration-300 font-medium inline-flex items-center shadow-md">
-                        <i class="fas fa-envelope mr-2"></i> Contact Support
-                    </a>
                 </div>
             </div>
         </div>
