--- a/behind_the_tech.html
+++ b/behind_the_tech.html
@@ -119,7 +119,6 @@
             <h2 class="text-3xl font-bold text-indigo-dark mb-12 text-center">Our Powerful Pipeline</h2>
 
             <div class="relative">
-                <!-- Timeline line -->
                 <div class="hidden lg:block absolute left-1/2 h-full w-1 bg-teal-light transform -translate-x-1/2">
                 </div>
 
@@ -245,12 +244,12 @@
     </section>
 
 
-    <section class="py-16 bg-white">
+        <section class="py-16 bg-white">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-bold text-indigo-dark mb-12 text-center">Our Tech Stack</h2>
 
-            <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-6">
-                <!-- Tech Item 1 -->
+            <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-6">
+                <!-- Tech 1 -->
                 <div
                     class="tech-card bg-white rounded-xl shadow-lg p-6 text-center transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
                     <div
@@ -261,7 +260,7 @@
                     <p class="text-sm text-gray-600">Advanced image analysis</p>
                 </div>
 
-                <!-- Tech Item 2 -->
+                <!-- Tech 2 -->
                 <div
                     class="tech-card bg-white rounded-xl shadow-lg p-6 text-center transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
                     <div
@@ -272,7 +271,7 @@
                     <p class="text-sm text-gray-600">Frontend logic</p>
                 </div>
 
-                <!-- Tech Item 3 -->
+                <!-- Tech 3 -->
                 <div
                     class="tech-card bg-white rounded-xl shadow-lg p-6 text-center transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
                     <div
@@ -283,7 +282,7 @@
                     <p class="text-sm text-gray-600">CLIP embeddings</p>
                 </div>
 
-                <!-- Tech Item 4 -->
+                <!-- Tech 4 -->
                 <div
                     class="tech-card bg-white rounded-xl shadow-lg p-6 text-center transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
                     <div
@@ -294,7 +293,7 @@
                     <p class="text-sm text-gray-600">Vector database</p>
                 </div>
 
-                <!-- Tech Item 5 -->
+                <!-- Tech 5 -->
                 <div
                     class="tech-card bg-white rounded-xl shadow-lg p-6 text-center transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
                     <div
@@ -304,6 +303,18 @@
                     <h3 class="font-bold text-indigo-dark mb-2">Netlify</h3>
                     <p class="text-sm text-gray-600">Serverless functions</p>
                 </div>
+
+                <!-- Tech 6 -->
+                <div
+                    class="tech-card bg-white rounded-xl shadow-lg p-6 text-center transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
+                    <div
+                        class="bg-teal-very-light rounded-full w-20 h-20 flex items-center justify-center mx-auto mb-4">
+                        <i class="fab fa-python python-icon text-4xl text-teal"></i>
+                    </div>
+                    <h3 class="font-bold text-indigo-dark mb-2">Python 3</h3>
+                    <p class="text-sm text-gray-600">Web Scrapping</p>
+                </div>
+
             </div>
         </div>
     </section>
