--- a/behind_the_tech.html
+++ b/behind_the_tech.html
@@ -244,76 +244,88 @@
     </section>
 
 
-        <section class="py-16 bg-white">
+    <section class="py-16 bg-white">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-bold text-indigo-dark mb-12 text-center">Our Tech Stack</h2>
 
             <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-6">
                 <!-- Tech 1 -->
-                <div
-                    class="tech-card bg-white rounded-xl shadow-lg p-6 text-center transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
+                <a href="https://gemini.google.com/?hl=en-IN" alt="Gemini AI">
                     <div
-                        class="bg-teal-very-light rounded-full w-20 h-20 flex items-center justify-center mx-auto mb-4">
-                        <i class="fab fa-google text-4xl text-teal"></i>
+                        class="tech-card bg-gemini rounded-xl shadow-lg p-6 text-center transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
+                        <div
+                            class="bg-teal-very-light rounded-full w-20 h-20 flex items-center justify-center mx-auto mb-4">
+                            <i class="fab fa-google text-4xl text-teal"></i>
+                        </div>
+                        <h3 class="font-bold text-indigo-dark mb-2">Gemini AI</h3>
+                        <p class="text-sm text-gray-600">Image analysis</p>
                     </div>
-                    <h3 class="font-bold text-indigo-dark mb-2">Gemini AI</h3>
-                    <p class="text-sm text-gray-600">Advanced image analysis</p>
-                </div>
-
+                </a>
+                
                 <!-- Tech 2 -->
-                <div
-                    class="tech-card bg-white rounded-xl shadow-lg p-6 text-center transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
+                <a href="https://huggingface.co/" alt="Hugging Face">
                     <div
-                        class="bg-teal-very-light rounded-full w-20 h-20 flex items-center justify-center mx-auto mb-4">
-                        <i class="fab fa-js text-4xl text-teal"></i>
+                        class="tech-card bg-huggingface rounded-xl shadow-lg p-6 text-center transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
+                        <div
+                            class="bg-teal-very-light rounded-full w-20 h-20 flex items-center justify-center mx-auto mb-4">
+                            <i class="fab fa-hubspot text-4xl text-teal"></i>
+                        </div>
+                        <h3 class="font-bold text-indigo-dark mb-2">Hugging Face </h3>
+                        <p class="text-sm text-gray-600">CLIP embeddings</p>
                     </div>
-                    <h3 class="font-bold text-indigo-dark mb-2">JavaScript</h3>
-                    <p class="text-sm text-gray-600">Frontend logic</p>
-                </div>
-
+                </a>
+                
                 <!-- Tech 3 -->
-                <div
-                    class="tech-card bg-white rounded-xl shadow-lg p-6 text-center transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
+                <a href="https://supabase.com/" alt="Supabase">
                     <div
-                        class="bg-teal-very-light rounded-full w-20 h-20 flex items-center justify-center mx-auto mb-4">
-                        <i class="fab fa-hubspot text-4xl text-teal"></i>
+                        class="tech-card bg-supabase rounded-xl shadow-lg p-6 text-center transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
+                        <div
+                            class="bg-teal-very-light rounded-full w-20 h-20 flex items-center justify-center mx-auto mb-4">
+                            <i class="fas fa-database text-4xl text-teal"></i>
+                        </div>
+                        <h3 class="font-bold text-indigo-dark mb-2">Supabase</h3>
+                        <p class="text-sm text-gray-600">Vector database</p>
                     </div>
-                    <h3 class="font-bold text-indigo-dark mb-2">Hugging Face</h3>
-                    <p class="text-sm text-gray-600">CLIP embeddings</p>
-                </div>
+                </a>
 
                 <!-- Tech 4 -->
-                <div
-                    class="tech-card bg-white rounded-xl shadow-lg p-6 text-center transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
+                <a href="https://www.netlify.com/" alt="Netlify">
                     <div
-                        class="bg-teal-very-light rounded-full w-20 h-20 flex items-center justify-center mx-auto mb-4">
-                        <i class="fas fa-database text-4xl text-teal"></i>
+                        class="tech-card bg-netlify rounded-xl shadow-lg p-6 text-center transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
+                        <div
+                            class="bg-teal-very-light rounded-full w-20 h-20 flex items-center justify-center mx-auto mb-4">
+                            <i class="fab fa-node-js text-4xl text-teal"></i>
+                        </div>
+                        <h3 class="font-bold text-indigo-dark mb-2">Netlify</h3>
+                        <p class="text-sm text-gray-600">Serverless functions</p>
                     </div>
-                    <h3 class="font-bold text-indigo-dark mb-2">Supabase</h3>
-                    <p class="text-sm text-gray-600">Vector database</p>
-                </div>
+                </a>
 
                 <!-- Tech 5 -->
-                <div
-                    class="tech-card bg-white rounded-xl shadow-lg p-6 text-center transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
+                <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" alt="JavaScript">
                     <div
-                        class="bg-teal-very-light rounded-full w-20 h-20 flex items-center justify-center mx-auto mb-4">
-                        <i class="fab fa-node-js text-4xl text-teal"></i>
+                        class="tech-card bg-javascript rounded-xl shadow-lg p-6 text-center transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
+                        <div
+                            class="bg-teal-very-light rounded-full w-20 h-20 flex items-center justify-center mx-auto mb-4">
+                            <i class="fab fa-js text-4xl text-teal"></i>
+                        </div>
+                        <h3 class="font-bold text-indigo-dark mb-2">JavaScript</h3>
+                        <p class="text-sm text-gray-600">Frontend logic</p>
                     </div>
-                    <h3 class="font-bold text-indigo-dark mb-2">Netlify</h3>
-                    <p class="text-sm text-gray-600">Serverless functions</p>
-                </div>
+                </a>
 
                 <!-- Tech 6 -->
-                <div
-                    class="tech-card bg-white rounded-xl shadow-lg p-6 text-center transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
+                <a href="https://www.python.org/" alt="Python">
                     <div
-                        class="bg-teal-very-light rounded-full w-20 h-20 flex items-center justify-center mx-auto mb-4">
-                        <i class="fab fa-python python-icon text-4xl text-teal"></i>
+                        class="tech-card bg-python rounded-xl shadow-lg p-6 text-center transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
+                        <div
+                            class="bg-teal-very-light rounded-full w-20 h-20 flex items-center justify-center mx-auto mb-4">
+                            <i class="fab fa-python python-icon text-4xl text-teal"></i>
+                        </div>
+                        <h3 class="font-bold text-indigo-dark mb-2">Python 3</h3>
+                        <p class="text-sm text-gray-600">Web Scrapping</p>
                     </div>
-                    <h3 class="font-bold text-indigo-dark mb-2">Python 3</h3>
-                    <p class="text-sm text-gray-600">Web Scrapping</p>
-                </div>
+                </a>
 
             </div>
         </div>
