FINAL USER EXPERIENCE OPTIMIZATION!

--- a/behind_the_tech.html
+++ b/behind_the_tech.html
@@ -297,7 +297,7 @@
                             <i class="fab fa-node-js text-4xl text-teal"></i>
                         </div>
                         <h3 class="font-bold text-indigo-dark mb-2">Netlify</h3>
-                        <p class="text-sm text-gray-600">Serverless functions</p>
+                        <p class="text-sm text-gray-600">Node.js functions</p>
                     </div>
                 </a>
 
