Final optimizations done!

--- a/behind_the_tech.html
+++ b/behind_the_tech.html
@@ -271,7 +271,7 @@
                             <i class="fab fa-hubspot text-4xl text-teal"></i>
                         </div>
                         <h3 class="font-bold text-indigo-dark mb-2">Hugging Face </h3>
-                        <p class="text-sm text-gray-600">CLIP embeddings</p>
+                        <p class="text-sm text-gray-600">CLIP model</p>
                     </div>
                 </a>
                 
@@ -284,7 +284,7 @@
                             <i class="fas fa-database text-4xl text-teal"></i>
                         </div>
                         <h3 class="font-bold text-indigo-dark mb-2">Supabase</h3>
-                        <p class="text-sm text-gray-600">Vector database</p>
+                        <p class="text-sm text-gray-600">Vector Database</p>
                     </div>
                 </a>
 
@@ -310,7 +310,7 @@
                             <i class="fab fa-js text-4xl text-teal"></i>
                         </div>
                         <h3 class="font-bold text-indigo-dark mb-2">JavaScript</h3>
-                        <p class="text-sm text-gray-600">Frontend logic</p>
+                        <p class="text-sm text-gray-600">Frontend</p>
                     </div>
                 </a>
 
@@ -323,7 +323,7 @@
                             <i class="fab fa-python python-icon text-4xl text-teal"></i>
                         </div>
                         <h3 class="font-bold text-indigo-dark mb-2">Python 3</h3>
-                        <p class="text-sm text-gray-600">Web Scrapping</p>
+                        <p class="text-sm text-gray-600">Scrapping</p>
                     </div>
                 </a>
 
