--- a/faqs.html
+++ b/faqs.html
@@ -63,7 +63,7 @@
             <div class="pt-2 pb-3 space-y-1">
                 <a href="https://snapshop-anurag.netlify.app/"
                     class="border-transparent text-gray-500 hover:bg-teal-50 hover:border-gray-300 hover:text-indigo-dark block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Home</a>
-                <a href="behind-the-tech.html"
+                <a href="behind_the_tech.html"
                     class="border-transparent text-gray-500 hover:bg-teal-50 hover:border-gray-300 hover:text-indigo-dark block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Behind
                     the Tech</a>
                 <a href="faqs.html"
