--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                     </div>
                 </div>
                 <div class="hidden sm:ml-6 sm:flex sm:items-center space-x-4">
-                    <a href="#"
+                    <a href="login.html" onclick="event.preventDefault(); alert('Log In functionality coming soon!');"
                         class="text-gray-500 hover:text-indigo-dark px-3 py-2 rounded-md text-sm font-medium flex items-center">
                         <i class="fas fa-user mr-1"></i> Log In
                     </a>
-                    <a href="#"
+                    <a href="signup.html" onclick="event.preventDefault(); alert('Sign Up functionality coming soon!');"
                         class="bg-indigo-dark text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-darker flex items-center">
                         <i class="fas fa-sign-in-alt mr-1"></i> Sign Up
                     </a>
@@ -72,11 +72,11 @@
                     class="border-transparent text-gray-500 hover:bg-teal-50 hover:border-gray-300 hover:text-indigo-dark block pl-3 pr-4 py-2 border-l-4 text-base font-medium">FAQs</a>
                 <div class="border-t border-gray-200 pt-4 pb-3">
                     <div class="space-y-1">
-                        <a href="#"
+                        <a href="login.html" onclick="event.preventDefault(); alert('Log In functionality coming soon!');"
                             class="block px-4 py-2 text-base font-medium text-gray-500 hover:text-indigo-dark hover:bg-teal-50">
                             <i class="fas fa-user mr-2"></i> Log In
                         </a>
-                        <a href="#"
+                        <a href="signup.html" onclick="event.preventDefault(); alert('Sign Up functionality coming soon!');"
                             class="block px-4 py-2 text-base font-medium text-gray-500 hover:text-indigo-dark hover:bg-teal-50">
                             <i class="fas fa-sign-in-alt mr-2"></i> Sign Up
                         </a>
