User Experience Improvement

--- a/faqs.html
+++ b/faqs.html
@@ -102,7 +102,7 @@
                         </button>
                         <div class="faq-answer">
                             <div>
-                                <p>SnapShop uses advanced computer vision and machine learning to analyze the images you
+                                <p>SnapShop uses advanced computer vision and machine learning model to analyze the images you
                                     upload. It identifies objects, patterns, and styles in your photos, then matches
                                     them with similar products from our database. You'll receive personalized
                                     recommendations based on your visual preferences.</p>
@@ -181,9 +181,9 @@
                         </button>
                         <div class="faq-answer">
                             <div>
-                                <p>Accuracy depends on image quality, the backend daatabase population and the
-                                    uniqueness of items. Sometimes inaccurate results might come as our databse is still
-                                    exapnding and it is limited to less product categoris for now. Try cropping to focus
+                                <p>Accuracy depends on image quality, the backend database population and the
+                                    uniqueness of items. Sometimes inaccurate results might come as our database is still
+                                    exapnding and it is limited to less product categories for now. Try cropping to focus
                                     on the specific item, using better lighting, or trying our sample image to see how
                                     it works.</p>
                             </div>
