User Experience Improvement finalization

--- a/faqs.html
+++ b/faqs.html
@@ -183,7 +183,7 @@
                             <div>
                                 <p>Accuracy depends on image quality, the backend database population and the
                                     uniqueness of items. Sometimes inaccurate results might come as our database is still
-                                    exapnding and it is limited to less product categories for now. Try cropping to focus
+                                    expanding and it is limited to less product categories for now. Try cropping to focus
                                     on the specific item, using better lighting, or trying our sample image to see how
                                     it works.</p>
                             </div>
