User Experience Improvement finalizations

--- a/behind_the_tech.html
+++ b/behind_the_tech.html
@@ -134,8 +134,7 @@
                                         1</div>
                                     <h3 class="text-xl font-bold text-indigo-dark">Image Upload</h3>
                                 </div>
-                                <p class="text-gray-600">Users upload an image through our intuitive interface with
-                                    drag-and-drop, file browsing, or direct camera access.</p>
+                                <p class="text-gray-600">Users upload an image through our intuitive interface with drag-and-drop, file browsing, or direct camera access for mobile devices with a preview- retry feature.</p>
                             </div>
                         </div>
                         <div class="lg:w-5/12">
@@ -227,7 +226,7 @@
                                     <h3 class="text-xl font-bold text-indigo-dark">Results Delivery</h3>
                                 </div>
                                 <p class="text-gray-600">The top 5 matching products are displayed with images, prices,
-                                    and direct purchase links, all optimized for instant loading with our background
+                                    and direct purchase links, all optimized for faster loading speeds with our background
                                     preloading system.</p>
                             </div>
                         </div>
