Demo video integrated via Loom

--- a/faqs.html
+++ b/faqs.html
@@ -92,6 +92,23 @@
                     how it works.</p>
             </div>
 
+            <!-- Quick Demo Section -->
+            <div class="max-w-4xl mx-auto mb-16">
+                <div class="text-center mb-8">
+                    <h2 class="text-3xl font-bold text-indigo-dark mb-4">A Quick Demo</h2>
+                    <p class="text-lg text-gray-600">See SnapShop in action with this brief demonstration video.</p>
+                </div>
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <div style="position: relative; padding-bottom: 52.76329509906152%; height: 0;">
+                        <iframe
+                            src="https://www.loom.com/embed/d3e7c193d2fe4f10bfefaf9a32958254?sid=6dbd1154-cffa-44db-9441-fa54e8b1831f"
+                            frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen
+                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+
             <div class="max-w-4xl mx-auto">
                 <div class="faq-container space-y-6">
                     <!-- FAQ Item 1 -->
@@ -102,7 +119,8 @@
                         </button>
                         <div class="faq-answer">
                             <div>
-                                <p>SnapShop uses advanced computer vision and machine learning model to analyze the images you
+                                <p>SnapShop uses advanced computer vision and machine learning model to analyze the
+                                    images you
                                     upload. It identifies objects, patterns, and styles in your photos, then matches
                                     them with similar products from our database. You'll receive personalized
                                     recommendations based on your visual preferences.</p>
@@ -182,8 +200,10 @@
                         <div class="faq-answer">
                             <div>
                                 <p>Accuracy depends on image quality, the backend database population and the
-                                    uniqueness of items. Sometimes inaccurate results might come as our database is still
-                                    expanding and it is limited to less product categories for now. Try cropping to focus
+                                    uniqueness of items. Sometimes inaccurate results might come as our database is
+                                    still
+                                    expanding and it is limited to less product categories for now. Try cropping to
+                                    focus
                                     on the specific item, using better lighting, or trying our sample image to see how
                                     it works.</p>
                             </div>
