--- a/faqs.html
+++ b/faqs.html
@@ -99,13 +99,7 @@
                     <p class="text-lg text-gray-600">See SnapShop in action with this brief demonstration video.</p>
                 </div>
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <div style="position: relative; padding-bottom: 52.76329509906152%; height: 0;">
-                        <iframe
-                            src="https://www.loom.com/embed/d3e7c193d2fe4f10bfefaf9a32958254?sid=6dbd1154-cffa-44db-9441-fa54e8b1831f"
-                            frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen
-                            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
-                        </iframe>
-                    </div>
+                    <div style="position: relative; padding-bottom: 52.76329509906152%; height: 0;"><iframe src="https://www.loom.com/embed/d3e7c193d2fe4f10bfefaf9a32958254?sid=a34413c0-e514-4c62-b6f9-d5cf4e4de24b" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
                 </div>
             </div>
 
